# Holaman

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  vite.config.ts
.cargo/: config.toml
.codex/: AGENTS.md
.github/workflows/: release.yml
docs/: 功能列表.md  界面设计稿.md  编译打包.md
scripts/: kill-port-1420.ps1
src/: App.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/lib/: api.ts  curl.ts  format.ts
