[package]
name = "holaman"
version = "0.1.0"
description = "Holaman API debugging workspace"
authors = ["Holaman"]
edition = "2021"

[lib]
name = "holaman_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "holaman"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
reqwest = { version = "0.12", default-features = false, features = ["charset", "cookies", "json", "multipart", "rustls-tls"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "json", "chrono"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
url = "2"
thiserror = "2"
